--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en" data-bs-theme="dark" class="h-100">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Bootstrap-Login</title>
 </head>
-<body class="d-flex align-items-center py-4 bg-body-tertiary">
-    <main class="w-100 m-auto">
+<body class="d-flex align-items-center py-4 bg-body-tertiary h-100">
+    <main class="w-100 m-auto form-container">
         <form action="">
             <img src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo.svg" class="mb-4" height="57" width="72"/>
             <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
             <div class="form-floating">
                 <input type="email" class="form-control" id="floatingInput" placeholder="your-email@gmail.com">
-                <label for="floatingInput">E-mail</label>
+                <label for="floatingInput">E-mail Adress</label>
             </div>
             <div class="form-floating">
                 <input type="password" class="form-control" id="floatingInput" placeholder="Password">
                 <label for="floatingInput">Password</label>
             </div>
+            <div class="form-check text-start my-3">
+                <input type="checkbox" class="form-check-input" id="flexCheckDefault"/>
+                <label for="">Remember me</label>
+            </div>
+            <button class="btn btn-primary w-100 py-2">Sign in</button>
         </form>
+        <p class="text-body-secondary mt-5 mb-13">© 2017-2023</p>
     </main>
 </body>
 </html>
